# AVC2019-Team2

./: AVC-Plan.pages  E101.h  README.md  readCamera.cpp
E101/LibE101/: core_benfelchri.cpp  start.cpp
E101/libtest/: test  test.cpp
LibE101/libtest/: Drive_lib.h  lt  readCamera.cpp  runMain  runMain.cpp  untitled 2  untitled.cpp
readCamera/: CMakeLists.txt  main.cpp
robot_code/: CMakeLists.txt  Makefile  a.out  runMain.cpp  runMain_exec  runTests  runTests.cpp
robot_code/AVC2019-team2/LibE101/libtest/: Drive_lib  Drive_lib.cpp  Drive_lib.cppy  given code.cpp  lt.cpp  runMain  runMain.cpp  test_Drive.cpp  untitled  untitled 2.cpp
robot_code/E101/LibE101/: makefile~
robot_code/E101/libtest/: E101.h  completiontest.cpp  coretest  coretest.cpp  lt  lt.cpp  runMain.cpp  statictest  test  test.cpp
robot_code/exec/: runMain.cpp
robot_code/include/: drive.h  drive.h.gch  readCamera.h  robot.h  robot.h.gch  testCamera.h
robot_code/src/: drive.cpp  readCamera.cpp  robot.cpp  testCamera.cpp
source/: main.cpp  readCamera.cpp  testCamera.cpp
source/E101/: readme.txt~
source/E101/LibE101/: core_benfelchri  makefile  start.cpp~
source/E101/libtest/: ._test.cpp  E101.h  output  readCamera  readCamera.cpp  statictest  statictest.cpp  test  testCamera.cpp
